# GeoFinal

./: .RData  .Rhistory  .gitignore  DataCenter_List.xlsx  DataCenters_Current_Map.rmd  OLD_prism_datacenters.tex  PRD.md  README.md  dataCenters.ipynb  main.py  pyproject.toml
.claude/: settings.local.json
ModelA/data/R_scripts/: 00_Setup.r  01_clean_hydrographicnetwork.r  02_clean_airports.r  03_clean_spainprotectedareas.r  04_clean_roads.r  05_clean_broadband.r  06_clean_ruggedness.r  07_clean_landcover.r  08_clean_seismicintensity.r  09_clean_crime.r  10_clean_arkolakis.r  11_clean_climate.r  19_build_provinces.r  20_build_raster_indicators.r  21_build_spatial_indicators.r  22_build_tabular_indicators.r  23_merge_all.r  9a_clean_population.r
ModelA/data/processed/indicators/: all_indicators.csv  all_indicators.rds  all_indicators_prepared.csv  all_indicators_prepared.rds  main_indicators.csv  main_indicators.rds  raster_indicators.csv  raster_indicators.rds  secondary_indicators.csv  secondary_indicators.rds  spatial_indicators.csv  spatial_indicators.rds  tabular_indicators.csv  tabular_indicators.rds
data/: spain_datacenters_v2.xlsx
